<resources>
    <string name="app_name">Notificaciones</string>
    <string name="tvToastTitle">Toast</string>
    <string name="tvDescription">Personalizado</string>
    <string name="tvTitulo">SISTEMAS DE NOTIFICACIÓN</string>
    <string name="tvToast">TOAST</string>
    <string name="tvSnackBar">SNACKBAR</string>
    <string name="btnNormal">NORMAL</string>
    <string name="btnGravity">GRAVITY</string>
    <string name="btnCustom">CUSTOM</string>
    <string name="sbNormal">NORMAL</string>
    <string name="sbColor">SB COLOR</string>
    <string name="sbCustom">CUSTOM</string>
    <string name="tvNotificacion">NOTIFICACIÓN</string>
    <string name="avAlerta">ALERTA</string>
    <string name="avSeleccion">SELECCIÓN</string>
    <string name="avCustom">CUSTOM</string>
    <string name="tvAviso">AVISO</string>
    <string name="tvMensaje">Ésto es una Alerta</string>


</resources>